Working_examples/Killercoda/deployments-mc/services.yaml
# httpbin service
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  selector:
    app: httpbin
  ports:
  - port: 80
    targetPort: 80
---
# nginx service
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
---
# # Envoy NodePort service
# apiVersion: v1
# kind: Service
# metadata:
#   name: envoy
# spec:
#   type: NodePort
#   selector:
#     app: envoy
#   ports:
#   - port: 10000
#     targetPort: 10000
#     nodePort: 30081

---
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
spec:
<<<<<<< HEAD
  selector:
    app: ratelimit
  ports:
  - name: grpc
    port: 8081
    targetPort: 8081
  - name: http
    port: 8080
    targetPort: 8080
=======
  ports:
  - port: 10000
    targetPort: 10000
    nodePort: 30081
---
# ratelimit service
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
spec:
  selector:
    app: ratelimit
  ports:
  - port: 8081
    name: grpc
    targetPort: 8081

>>>>>>> 9a5f3436c15a9d647dad98bb371e8d46f1ac0503
